# append-multi-log

./: Cargo.toml  README.md
src/: error.rs  lib.rs  log.rs  options.rs
